...
    <string name="app_name">EspressoInAction</string>

    <string name="coffee_tab">Coffees</string>
    <string name="order_tab">Orders</string>
    <string name="info_tab">Info</string>

    <string name="small_size_label">Small</string>
    <string name="medium_size_label">Medium</string>
    <string name="large_size_label">Large</string>
    <string name="tall_size_label">Tall</string>
    <string name="plus_zero_label">\n+$0</string>
    <string name="plus_one_label">\n+$1</string>
    <string name="plus_two_label">\n+$2</string>
    <string name="plus_three_label">\n+$3</string>
    
    <string name="nine_to_twelve_label">AM\n9-12</string>
    <string name="twelve_to_three_label">PM\n12-3</string>
    <string name="three_to_five_label">PM\n3-5</string>
    <string name="five_to_nine_label">PM\n5-9</string>

    <string name="not_sweet_label">Not Sweet</string>
    <string name="slightly_sweet_label">Slightly Sweet</string>
    <string name="half_sweet_label">Half Sweet</string>
    <string name="moderately_sweet_label">Moderately Sweet</string>
    <string name="full_sweetness_label">Full Sweetness</string>
    <string name="go_label">Go</string>

    <string name="soy_milk_label">Soy</string>
    <string name="almond_milk_label">Almond</string>
    <string name="coconut_milk_label">Coconut</string>
    <string name="whole_milk_label">Whole Milk</string>
    <string name="none_milk_type">None</string>

    <string name="order_label">Order</string>
    <string name="order_placed">Enjoy your coffee!</string>
    <string name="day_label_txt">Day %s</string>
    <string name="time_label_txt">Time %s</string>
    <string name="thank_you_message">Your total</string>
    <string name="day_label">Day</string>
    <string name="time_label">Time</string>
    <string name="size_label">Size</string>
...
