...
            android:text="Size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/small_cup_size"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:onClick="@{sizeHandler::onClick}"
            android:drawableTop="@drawable/ic_small_coffee_size"
            android:drawablePadding="10dp"
            android:layout_marginTop="16dp"
            tools:text="@string/small_size_label"
            android:text="@{textHandler.setText(@string/small_size_label,@string/plus_zero_label)}"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/label_one"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintRight_toLeftOf="@+id/medium_size_cup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/medium_size_cup"
            android:layout_width="wrap_content"
...
            android:drawableTop="@drawable/ic_coffee_medium_size"
            app:layout_constraintBottom_toBottomOf="@+id/small_cup_size"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toTopOf="@+id/small_cup_size"
            android:layout_marginTop="0dp"
            android:text="@{textHandler.setText(@string/medium_size_label,@string/plus_one_label)}"
            app:layout_constraintRight_toLeftOf="@+id/large_size_cup"
            app:layout_constraintLeft_toRightOf="@+id/small_cup_size"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
...
            android:fontFamily="sans-serif-medium"
            android:drawableTop="@drawable/ic_coffee_large_size"
            app:layout_constraintTop_toTopOf="@+id/medium_size_cup"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/medium_size_cup"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toLeftOf="@+id/tall_size_cup"
            app:layout_constraintLeft_toRightOf="@+id/medium_size_cup"
            app:layout_constraintVertical_bias="0.636" />

        <TextView
            android:id="@+id/tall_size_cup"
            android:layout_width="wrap_content"
...
            android:layout_marginTop="@dimen/spacing_huge"
            app:layout_constraintTop_toBottomOf="@+id/small_cup_size"
            android:layout_marginLeft="@dimen/spacing_big"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/soy_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Soy"
            style="@style/Widget.Label"
            android:onClick="@{milkHandler::onClick}"
            android:drawableTop="@drawable/ic_beans"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:drawablePadding="10dp"
            app:layout_constraintRight_toLeftOf="@+id/coconut_milk"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/coconut_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:drawableTop="@drawable/ic_coconut_x"
            app:layout_constraintTop_toTopOf="@+id/soy_milk"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/soy_milk"
            android:layout_marginBottom="0dp"
            android:drawablePadding="10dp"
            app:layout_constraintRight_toLeftOf="@+id/almond_milk"
            app:layout_constraintLeft_toRightOf="@+id/soy_milk"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/almond_milk"
            android:layout_width="wrap_content"
...
            app:layout_constraintTop_toTopOf="@+id/coconut_milk"
            android:layout_marginTop="8dp"
            android:drawablePadding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/coconut_milk"
            android:layout_marginBottom="0dp"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintRight_toLeftOf="@+id/cow_milk"
            app:layout_constraintLeft_toRightOf="@+id/coconut_milk" />

        <TextView
            android:id="@+id/cow_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
