...
    <data>
        <variable
            name="result"
            type="com.vpaliy.espressoinaction.presentation.ui.fragment.CoffeeOrderFragment.Result"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/go_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_height"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:layout_height="440dp"
        >

        <TextView
            android:id="@+id/coffee_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:text="@{result.title}"
...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Espresso"
            />

        <TextView
            android:id="@+id/txt_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/done"
            android:drawablePadding="@dimen/spacing_medium"
            android:drawableTint="@color/colorWhite"
...
            android:layout_marginTop="@dimen/spacing_medium"
            android:lineSpacingExtra="4dp"
            android:text="@string/thank_you_message"
            android:scaleX="1.5"
            android:scaleY="1.5"
            style="@style/Widget.Label"
            app:layout_constraintBottom_toBottomOf="@+id/coffee_price"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/coffee_price"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintRight_toLeftOf="@+id/coffee_price"
            android:layout_marginEnd="31dp" />

...
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toRightOf="@+id/coffee_icon"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/confirmation_time" />

        <TextView
            android:id="@+id/confirmation_cup_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Small"
            style="@style/Widget.Label"
            android:textSize="16sp"
            android:text="@{result.size}"
...
            app:layout_constraintLeft_toRightOf="@+id/coffee_icon"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/confirmation_time" />

        <TextView
            android:id="@+id/confirmation_milk_type"
            style="@style/Widget.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="4dp"
...
            app:layout_constraintLeft_toLeftOf="@+id/confirmation_cup_type"
            app:layout_constraintTop_toBottomOf="@+id/confirmation_cup_type"
            tools:drawableLeft="@drawable/ic_coconut_x"
            tools:text=" Coconut" />

        <TextView
            android:id="@+id/confirmation_sweetness"
            style="@style/Widget.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="42dp"
...
